--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^3.2.25",
+    "vue-material-design-icons": "^5.1.2",
     "vue-router": "^4.1.2",
     "vuex": "^4.0.2"
   },
