--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "json-server": "^0.17.0",
     "vue": "^3.2.25",
     "vue-material-design-icons": "^5.1.2",
     "vue-router": "^4.1.2",
