--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "json-server": "^0.17.0",
+    "qrcode.vue": "^3.3.3",
     "vue": "^3.2.25",
     "vue-material-design-icons": "^5.1.2",
+    "vue-numeric-input": "^2.0.0",
     "vue-router": "^4.1.2",
     "vuex": "^4.0.2"
   },
