--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "json-server": "^0.17.0",
     "qrcode.vue": "^3.3.3",
     "vue": "^3.2.25",
+    "vue-awesome-paginate": "^1.0.23",
     "vue-material-design-icons": "^5.1.2",
     "vue-numeric-input": "^2.0.0",
     "vue-router": "^4.1.2",
